# ServerStatus

./: .gitignore  CMakeLists.txt  README.md
agent/: CMakeLists.txt
agent/include/: agent_config.h  client.h
agent/include/collector/: cpu.h  disk.h  network.h  ram.h  speedtest.h
agent/include/monitors/: network.h  ram.h
agent/resources/: config.yaml
agent/src/: client.cc  config.cc  main.cc
agent/src/collector/: cpu.cc  disk.cc  network.cc  ram.cc  speedtest.cc
agent/src/monitors/: ram.cc
common/: CMakeLists.txt
common/include/: config_loader.h  utils.h
common/src/: utils.cc
protos/: collector.proto
server/: CMakeLists.txt
server/include/: server_config.h  service.h  speedtest_manager.h  storage.h
server/include/api/: history_handler.h  stats_handler.h
server/include/handlers/: update_handler.h
server/resources/: config.yaml
server/src/: config.cc  main.cc  service.cc  speedtest_manager.cc
server/src/api/: history_handler.cc  stats_handler.cc
server/src/handlers/: update_handler.cc
server/web/: index.html
server/web/assets/css/: style.css
server/web/assets/js/: app.js
web/: CMakeLists.txt
web/include/: app.h  network.h  ui_renderer.h
web/public/: index.html
web/public/assets/css/: style.css
web/src/: app.cc  main.cc  network.cc  ui_renderer.cc
